Bug 2042247 - Fix datetime-local input picker time colon alignment. r=desktop-theme-reviewers,emilio
The colon was centered but the spinners were not, causing them to be misaligned. Fixing this caused the time picker to shift when the month-year spinners are shown, so I have fixed that as well.

Differential Revision: https://phabricator.services.mozilla.com/D302403

--- a/toolkit/themes/shared/datetimeinputpickers.css
+++ b/toolkit/themes/shared/datetimeinputpickers.css
@@ -210,7 +210,7 @@ button.month-year.active {
 
 .month-year-view > .spinner-container {
   width: 5.5rem;
-  margin: 2rem 0.5rem;
+  margin: 3rem 0.5rem;
 }
 
 .order-month-year > #spinner-month,
@@ -316,6 +316,7 @@ button.month-year.active {
 .spinner-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: var(--spinner-width);
 }
 
